# CodeHarness

./: .gitignore  README.md  pyproject.toml
src/codeharness/: __init__.py  cli.py  config.py  workspace.py
src/codeharness/agent/: __init__.py  loop.py  models.py  prompt.py  provider.py
src/codeharness/llm/: __init__.py  base.py  fake.py  openai_compatible.py
src/codeharness/safety/: __init__.py  policy.py
src/codeharness/session/: __init__.py  recorder.py
src/codeharness/tools/: __init__.py  base.py  command.py  defaults.py  files.py  registry.py  result.py
tests/: test_agent_loop.py  test_cli.py  test_config.py  test_file_tools.py  test_llm_action_provider.py  test_openai_compatible_client.py  test_run_command_tool.py  test_tool_permissions.py  test_tool_schemas.py  test_tools_registry.py  test_workspace.py
