[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeharness"
version = "0.1.0"
description = "A lightweight CLI programming agent scaffold."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openai>=1.0,<3.0",
    "typer>=0.12,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
CodeHarness = "codeharness.cli:app"
code-harness = "codeharness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codeharness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
